--- a/zt-rv-hsc/build.gradle
+++ b/zt-rv-hsc/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id 'com.android.application'
 }
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdk 32
