--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = '1.8.10'
+    ext.compose_version = '1.4.3'
     repositories {
-        maven { url 'https://maven.aliyun.com/repository/public' }
-        maven { url 'https://maven.aliyun.com/repository/google' }
-        maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
+        // 阿里云镜像（优先）
+        maven { url 'https://maven.aliyun.com/repository/google' }       // Android 官方库
+        maven { url 'https://maven.aliyun.com/repository/central' }     // Maven 中央库
+
+        // 添加腾讯云镜像仓库（优先使用）
+        maven { url 'https://mirrors.cloud.tencent.com/nexus/repository/maven-public/' }
+
         google()
         mavenCentral()
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.4.2'
+        classpath 'com.android.tools.build:gradle:8.9.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
