--- a/gradle.properties
+++ b/gradle.properties
@@ -22,3 +22,6 @@ kotlin.code.style=official
 
 # vivo
 android.injected.testOnly=false
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
