--- a/zt-vp2-rv/build.gradle
+++ b/zt-vp2-rv/build.gradle
@@ -26,6 +26,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.zzt.zt_vp2_rv'
 }
 
 dependencies {
