--- a/zt-websocket/build.gradle
+++ b/zt-websocket/build.gradle
@@ -4,12 +4,12 @@ plugins {
 
 android {
     compileSdk 31
-    buildToolsVersion '30.0.3'
+    buildToolsVersion '35.0.0'
 
     defaultConfig {
         applicationId "com.zzt.zt_websocket"
         minSdk 21
-        targetSdk 31
+        targetSdk 35
         versionCode 1
         versionName "1.0"
 
@@ -26,6 +26,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    namespace 'com.zzt.zt_websocket'
 }
 
 dependencies {
